--- a/client/src/styles/haon.css
+++ b/client/src/styles/haon.css
@@ -142,7 +142,7 @@
     width: 100%;
 }
 .mypage-review-table-head{
-    background-color: rgb(236, 236, 236);
+    background-color: gainsboro;
 }
 .mypage-review-table-head>th{
     padding: 15px 0;
@@ -184,6 +184,9 @@
     background-color: rgb(232, 214, 255);
     font-weight: 500;
 }
+.mypage-review-register:hover{
+    cursor: pointer;
+}
 .mypage-review-desc{
     border-top: 1px solid black;
     padding: 20px 0;
@@ -197,4 +200,198 @@
 }
 .mypage-review-desc-tab>span:last-child{
     padding-right: 20px;
+}
+.mypage-review-table{
+    border: 1px solid gray;
+    font-size: 14px;
+}
+.mypage-review-table>tr{
+    border: 1px solid gray;
+}
+.mypage-review-table>tr>th{
+    border: 1px solid gray;
+    width: 200px;
+    padding: 15px;
+    text-align: left;
+    font-weight: 300;
+    background-color: gainsboro;
+}
+.mypage-review-table>tr>td{
+    padding: 10px 40px;
+}
+.mypage-review-table>tr>td>li{
+    list-style-type: circle;
+    padding: 5px 0;
+}
+.mypage-review-table>tr>td>table{
+    text-align: left;
+    margin: 0;
+}
+.mypage-review-table>tr>td>table>tr{
+    border-top: 1px solid gray;
+}
+.mypage-review-table>tr>td>table>tr:last-child{
+    border-bottom: 1px solid gray;
+}
+.mypage-review-table>tr>td>table>tr>th,.mypage-review-table>tr>td>table>tr>td{
+    padding: 15px;
+    font-weight: 300;
+}
+.mypage-review-table>tr>td>table>tr>th:first-child{
+    width: 300px;
+    background-color: gainsboro;
+}
+.mypage-review-table>tr>td>table>tr>th:last-child{
+    background-color: gainsboro;
+    width: 130px;
+}
+.mypage-review-table>tr>td>table>tr>th:first-child,
+.mypage-review-table>tr>td>table>tr>td:first-child{
+    border-right: 1px solid gray;
+}
+.mypage-review-table>tr:nth-child(2)>td>li:first-child{
+    padding-bottom: 10px;
+    /* background-color: red; */
+}
+.mypage-review-table>tr:nth-child(2)>td>li:nth-child(3){
+    padding-top: 10px;
+    /* background-color: red; */
+}
+.mypage-review-table-box{
+    padding-bottom: 70px;
+}
+.mypage-review-check-box>div:last-child{
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 30px 0 100px;
+    text-align: center;
+}
+/****************************************  */
+/* ************마이페이지 회원정보관리 비밀번호확인       */
+/*****************************************  */
+.mypage-myinfo-pwdCheck{
+    padding: 20px 0;
+    font-weight: 400;
+    font-size: 18px;
+}
+.mypage-myinfo-pwdCheck-box{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 1px solid gray; */
+}
+.mypage-myinfo-pwdCheck-box>label{
+    margin: 0;
+    width: 300px;
+}
+.mypage-myinfo-pwdCheck-box>input{
+    margin: 0;
+    width: 100%;
+    padding: 15px 10px ;
+    border-radius: 4px;
+    border: 1px solid gray;
+}
+.mypage-myinfo-pwdCheckBtn{
+    padding: 50px 0;
+    text-align: center;
+}
+.mypage-myinfo-pwdCheckBtn button{
+    padding: 20px 5px;
+    background-color: blueviolet;
+    color: white;
+    width: 300px;
+    border-radius: 5px;
+    font-size: 16px;
+}
+.mypage-myinfo-update-box{
+    padding: 10px 0;
+}
+.mypage-myinfo-update-box >h5{
+    font-size: 24px;
+    padding: 20px 0;
+}
+.mypage-myinfo-update-box >ul>li{
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.mypage-myinfo-update-box >ul>li>label{
+    width: 250px;
+    display: inline-block;
+}
+.mypage-myinfo-update-box >ul>li>input{
+    padding: 15px;
+    width: 710px;
+    margin-right: 10px;
+    border-radius: 5px;
+    border: 1px solid gainsboro;
+    background: gainsboro;
+}
+.mypage-myinfo-update-box >ul>li>button{
+    padding: 15px 10px;
+    border-radius: 5px;
+    background-color: white;
+    width: 180px;
+    border: 1px solid black;
+}
+.mypage-myinfo-update-check1{
+    margin-left: 260px;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    /* border: 1px solid red; */
+    justify-content: flex-start;
+    padding: 5px 0;
+}
+
+.mypage-myinfo-update-check1>span, .mypage-myinfo-update-check2>div:first-child>span,
+.mypage-myinfo-update-check1>input,.mypage-myinfo-update-check2>div:first-child>input,
+.mypage-myinfo-update-check2>div{
+    margin: 0;
+}
+.mypage-myinfo-update-check2{
+    justify-content: space-between;
+    margin-left: 260px;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    /* border: 1px solid blue; */
+    padding-bottom: 20px;
+}
+.mypage-myinfo-update-check2>div:first-child{
+    display: flex;
+    align-items: center;
+}
+.mypage-myinfo-update-check1>input,.mypage-myinfo-update-check2>div:first-child>input{
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+}
+.mypage-myinfo-update-btn{
+    text-align: center;
+    padding: 40px 0;
+
+}
+.mypage-myinfo-update-btn>button{
+    padding: 15px 10px;
+    border-radius: 5px;
+    background-color:blueviolet;
+    color: white;
+    width: 280px;
+    font-size: 16px;
+    /* border: 1px solid black; */
+}
+.mypage-myinfo-update-desc{
+    margin-left: 260px;
+    background-color: gainsboro;
+    padding: 20px 25px;
+    font-size: 14px;
+    color: gray;
+}
+.mypage-myinfo-update-desc>ul>li{
+    padding: 5px 0;
+}
+.mypage-myinfo-update-desc>ul>li>h4,.mypage-myinfo-update-desc>ul>li>h5{
+    padding: 5px 0;
 }
