--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1495,7 +1495,7 @@ footer .etc .etc-right{
 
 /* 상품 정보 리스트 */
 .gods-detail {
-    min-height: calc(100vh - 544px);
+    /* min-height: calc(100vh - 544px); */
     padding-top: 0 !important;
 }
 .tab-rects {
@@ -1504,7 +1504,14 @@ footer .etc .etc-right{
 .gods-detail .tab-rects {
     margin-bottom: 0;
 }
-
+/* 스크롤 고정 이벤트 */
+.product-mypage-container.fixed {
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    background-color: white; /* 배경색 추가 */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
+}
 .tab-rects>ul {
     position: relative;
     display: flex;
