--- a/client/src/styles/haon.css
+++ b/client/src/styles/haon.css
@@ -1,9 +1,15 @@
 /****************************************  */
 /* ************마이페이지 주문교환반품취소       */
 /*****************************************  */
+.order-list-ordertab{
+    /* background-color: rgb(218, 218, 218); */
+    margin: 0;
+}
+
 .order-list-bottom{
     display: flex;
     justify-content: space-between;
+    padding: 15px 0;
 }
 .order-list-bottom>span{
     margin: 0;
@@ -18,7 +24,7 @@
     text-align: center;
     padding-bottom: 30px;
     padding-top: 40px;
-    z-index: 1;
+    z-index: 10;
 }
 .order-list-deliverymap>div>p:first-child{
     background-color: black;
@@ -50,12 +56,13 @@
 }
 .order-list-deliverylist{
     border-bottom: 1px solid gray;
-    margin-bottom: 40px;
+    /* background-color: red; */
 }
 .order-list-deliverylist>ul>li{
     padding: 15px;
     border-top: 1px solid gray;
     font-size: 14px;
+    text-align: left;
 }
 .order-list-deliverylist>ul>li>span:first-child{
     font-weight: 600;
@@ -78,6 +85,7 @@
     margin-left: 120px;
     top: 11%;
     text-align: center;
+    z-index: 1;
 }
 
 
@@ -134,11 +142,16 @@
     font-size: 14px;
     font-weight: 100;
 }
-.mypage-review-table{
+.mypage-review-table {
     margin-top: 40px;
-    border-top: 1px solid gray;
 }
-.mypage-review-table>table{
+.mypage-review-table-notmargin{
+    border-top: 1px solid gray;
+    /* background-color: aqua; */
+    /* margin-bottom: 50px; */
+
+}
+.mypage-review-table>table, .mypage-review-table-notmargin>table{
     width: 100%;
 }
 .mypage-review-table-head{
