--- a/client/src/styles/yuna.css
+++ b/client/src/styles/yuna.css
@@ -420,3 +420,31 @@
 .productSlide-next-button {
     font-size: 1.8rem;
 }
+
+/**************************
+ * 인덱스 상단 - 이미지 슬라이더
+ * YuNa
+**************************/
+.swiper {
+    /* border: 1px solid blueviolet; */
+    width: 100%;
+    /* overflow: hidden; */
+}
+.swiper-btn-container {
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    top: 50%;
+}
+.swiper-btn-container > button {
+    border: 1px solid red;
+    border-radius: 15px;
+    margin: 0px;
+    font-size: 3.1rem;
+    /* color: #fff; */
+    width: 70px;
+    height: 70px;
+    line-height: 35px;
+}
