--- a/client/src/styles/haon.css
+++ b/client/src/styles/haon.css
@@ -324,7 +324,7 @@
     font-size: 24px;
     padding: 20px 0;
 }
-.mypage-myinfo-update-box >ul>li{
+.mypage-myinfo-update-box >ul>li:not(.mypage-myinfo-none-update-idbox, .mypage-myinfo-update-addressbox){
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
@@ -340,7 +340,30 @@
     margin-right: 10px;
     border-radius: 5px;
     border: 1px solid gainsboro;
+}
+.mypage-myinfo-none-update-idbox{
+    padding: 10px 0;
+}
+.mypage-myinfo-none-update-idbox>input{
+    padding: 15px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid gainsboro;
+    margin-left: 8px;
+}
+.mypage-myinfo-update-input{
+    background-color: white;
+}
+.mypage-myinfo-none-update-input{
     background: gainsboro;
+
+}
+.mypage-myinfo-none-update-idbox>label{
+    width: 250px;
+    display: inline-block;
+    text-align: left;
+    margin: 0;
+    /* border: 1px solid red; */
 }
 .mypage-myinfo-update-box >ul>li>button{
     padding: 15px 10px;
@@ -408,4 +431,38 @@
 }
 .mypage-myinfo-update-desc>ul>li>h4,.mypage-myinfo-update-desc>ul>li>h5{
     padding: 5px 0;
+}
+
+.mypage-myinfo-update-addressbox {
+    padding: 10px 0;
+}
+.mypage-myinfo-update-addressbox > label{
+    /* border: 3px solid red; */
+    margin: 0;
+    width: 250px;
+}
+.mypage-myinfo-update-addressbox > input {
+    padding: 15px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid gainsboro;
+    margin-left: 8px;
+}
+.mypage-myinfo-update-addressbox >button{
+    padding: 15px 10px;
+    border-radius: 5px;
+    background-color: white;
+    width: 180px;
+    border: 1px solid black;
+    margin-left: 6px;
+}
+.mypage-myinfo-update-addressbox2{
+    padding: 10px 0;
+}
+.mypage-myinfo-update-addressbox2>input{
+    padding: 15px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid gainsboro;
+    margin-left: 258px;
 }
